[package]
name = "russian-roulette"
publish = false
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
eth-keystore = "0.5.0"
fuels = { version = "0.70.4", features = ["fuel-core-lib"] }
indicatif = "0.17"
orao-fuel-vrf = "0.2.10"
rand = "0.8"
rpassword = "7.0.0"
shellexpand = "3.1.0"
tokio = { version = "1.15", features = ["rt", "macros", "time"] }
